# learn_opengl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  app.hpp  camera.hpp  main.cpp  model.hpp  opengl.hpp  player.hpp  test_scene.hpp  ui.hpp  vcpkg.json
assets/shaders/: scene_frag.glsl  scene_frame_frag.glsl  scene_frame_vert.glsl  scene_vert.glsl
coel/: CMakeLists.txt  app.cpp  application.hpp  exception.hpp  input.hpp  ui.hpp
coel/game/: player.hpp
coel/graphics/: camera.hpp  noise.hpp  ui.hpp
coel/opengl/: batch.hpp  buffers.hpp  core.hpp  frame.hpp  model.hpp  shader.hpp  texture.hpp
coel/opengl/renderers/: batch.hpp  deferred.hpp  quad.hpp  shaders.hpp  text_batch.hpp  ui_batch.hpp
game/: app.hpp  player.hpp  test_scene.hpp
game/assets/shaders/: mesh_frag.glsl  mesh_vert.glsl  scene_frag.glsl  scene_vert.glsl  ui_vert.glsl
marching_cubes/: CMakeLists.txt  main.cpp
marching_cubes/assets/shaders/: chunk.glsl
math_testing/: CMakeLists.txt  main.cpp  matrix2d.cpp
math_testing/assets/: frame.glsl  player.glsl  second.glsl
opengl/: buffers.hpp  frame.hpp  shader.hpp  texture.hpp
opengl/renderers/: batch.hpp  text_batch.hpp  ui_batch.hpp
point_search/: CMakeLists.txt  main.cpp
shader_toy/: CMakeLists.txt  main.cpp  raymarch.cpp  simple.cpp
shader_toy/shaders/: first.glsl  raymarch.glsl
simple_game/: CMakeLists.txt  main.cpp
software_rendering/: CMakeLists.txt  main.cpp  main.glsl  screen.hpp
text_rendering/: CMakeLists.txt  main.cpp
text_rendering/assets/: quad_vert.glsl
tiles_game/: CMakeLists.txt  main.cpp  tiles.hpp
tiles_game/assets/: main.glsl
ui_testing/: CMakeLists.txt  text.cpp  ui.cpp  ui1.cpp  ui1.hpp  ui2.cpp  ui2.hpp
ui_testing/assets/: quad_frag.glsl
voxel/: CMakeLists.txt  app.hpp  main.cpp  player.hpp  test_scene.hpp
voxel/assets/shaders/: scene_frag.glsl  scene_frame_frag.glsl
voxel_game/: CMakeLists.txt  app.hpp  chunk.hpp  chunk2d.hpp  deferred.hpp  main.cpp  noise.hpp  player.hpp  player2d.hpp  test_scene.hpp
voxel_game/assets/shaders/: block_frag.glsl  block_vert.glsl  frame_frag.glsl  frame_vert.glsl  scene_frag.glsl  scene_frame_frag.glsl  scene_vert.glsl  text_frag.glsl  text_vert.glsl  tile_frag.glsl  tile_vert.glsl  ui_frag.glsl
voxel_game/rastered/: CMakeLists.txt  main.cpp
voxel_game/raytraced/: CMakeLists.txt  chunk.hpp  main.cpp
voxel_game/raytraced/assets/shaders/: chunk.comp  frame_frag.glsl  tile_frag.glsl  tile_vert.glsl
