cmake_minimum_required(VERSION 3.18)

project(learn_opengl)

add_subdirectory(coel)

# add_subdirectory(simple_game)
# add_subdirectory(math_testing)
# add_subdirectory(point_search)
# add_subdirectory(tiles_game)
add_subdirectory(voxel_game)
# add_subdirectory(shader_toy)
# add_subdirectory(ui_testing)
# add_subdirectory(marching_cubes)
# add_subdirectory(software_rendering)
